Converts m/s to mph and kph

--- a/desktop.html
+++ b/desktop.html
@@ -98,8 +98,8 @@
 	<div id="locationModal">
 		<div class="credits">
 		<img src="widget/weather/img/back.svg">
-		<h1 style="text-align: center">Palapa 1.0</h1>
-		<p>Palapa is a simple weather BlankOn Linux</p>
+		<h1 style="text-align: center">Tekukur 1.0</h1>
+		<p>Tekukur simple weather BlankOn Linux</p>
 
 		<h3 style="text-align: center">Thanks for using.</h3><br><br>
 	</div>
@@ -128,8 +128,8 @@
 			<span data-color="101010"></span>
 		</div>
 		<br>
-		<!--a class="btn" tag="credits">About</a>
-		<br><br><br><br-->
+		<!--a class="btn" tag="credits">About</a-->
+		<br><br><br><br>
 	</div>
 	</div>
 	<div id="errorMessage">
