--- a/desktop.html
+++ b/desktop.html
@@ -119,6 +119,7 @@
 			<span data-color="gradient"></span>
 			<span data-color="008000"></span>
 			<span data-color="004F1B"></span>
+			<span data-color="C9A100"></span>
 			<span data-color="C83608"></span>
 			<span data-color="920200"></span>
 			<span data-color="A52A2A"></span>
